--- a/src/main/resources/templates/categoria/fragmentos.html
+++ b/src/main/resources/templates/categoria/fragmentos.html
@@ -6,27 +6,6 @@
         <title>AdvaTech</title>
     </head>
     <body>
-        
-        
-        <!-- 1 boton de agregar... llamará a una ventana modal-->
-        <section th:fragment="botonesAgregar" class="py-4 mb-4">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">   
-                        <button 
-                            type="button" 
-                            class="btn btn-primary btn-block" 
-                            data-bs-toggle="modal" 
-                            data-bs-target="#agregarCategoria">
-                            <i class="fas fa-plus"></i> [[#{categoria.agregar}]]
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
-        
-        
 
         <!-- 2 Fragmento para iniciar sesion es la ventana modal -->
         <section th:fragment="iniciarSesion">
@@ -60,8 +39,8 @@
                     </div>
                 </div>
         </section>
-        
-        
+
+
         <!-- 3 Fragmento para registarse es la ventana modal -->
         <section th:fragment="ingresarUsuario">
             <div id="ingresarUsuario" 
@@ -94,35 +73,63 @@
                     </div>
                 </div>
         </section>  
-        
-        <!-- 4 Listado de categorias (en progeso)-->
+
+
+        <!-- 1 Fragmento del boton para agregar, llama una ventana modal-->
+        <section th:fragment="botonesAgregar" class="py-3 mb-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">   
+                        <button 
+                            type="button" 
+                            class="btn btn-primary btn-block shadow" 
+                            data-bs-toggle="modal" 
+                            data-bs-target="#agregarCategoria">
+                            <i class="fas fa-plus"></i> [[#{categoria.agregar}]]
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 2 Listado de categorias-->
         <section th:fragment="listadoCategorias" id="categorias">
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
-                        <div class="card">
-                            <div class="card-header">
+                        <div class="card shadow">
+                            <div class="card-header ">
                                 <h4>[[#{categoria.listado}]]</h4>
                             </div>
                             <div th:if="${categorias != null and !categorias.empty}">
                                 <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
+                                            <th>[[#{categoria.nombre}]]</th>
                                             <th>[[#{categoria.descripcion}]]</th>
-                                            <th>[[#{categoria.activo}]]</th>
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
                                         <tr th:each="categoria, contador : ${categorias}">
-                                            <td>[[${contador.count}]]</td>
-                                            <td>[[${categoria.descripcion}]]</td>
-                                            <td th:text="${categoria.activo} ? 'Activa' : 'Inactiva'" />
-                                            <td><a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
-                                                   class="btn btn-danger">
-                                                    <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
+                                            <td>[[#{categoria.id}]]</td>
+                                            <td>[[#{categoria.nombre}]]</td>
+                                            <td>[[#{categoria.descripcion}]]</td>
+                                            <td>
+                                                <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
+                                                   class="btn btn-outline-danger me-2"
+                                                   data-bs-toggle="tooltip" 
+                                                   data-bs-placement="top" 
+                                                   title="Eliminar categoría">
+                                                    <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
+                                                </a>
                                                 <a th:href="@{/categoria/modificar/}+${categoria.idCategoria}"
-                                                   class="btn btn-success">
-                                                    <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]</a></td></tr>
+                                                   class="btn btn-outline-success me-2"
+                                                   data-bs-toggle="tooltip" 
+                                                   data-bs-placement="top" 
+                                                   title="Modificar categoría">
+                                                    <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]
+                                                </a>
+                                            </td></tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -132,17 +139,127 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="card text-center bg-primary text-white mb-3">
+                        <div class="card text-center bg-light text-primary mb-3 shadow" style="border-radius: 15px;">                           
                             <div class="card-body">
-                                <h3>[[#{categoria.total}]]</h3>
-                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalCategorias}]]</h4>
+                                <h3 style="font-size: 1.5rem;">[[#{categoria.total}]]</h3>
+                                <h4 class="fs-2" style="font-size: 2.5rem;"></i> [[${totalCategorias}]]</h4>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>        
+        </section>
 
-    
-    
-</html>
+        <!-- 3 Fragmento para agregar una categoria -->
+        <section th:fragment="agregarCategoria">
+            <div id="agregarCategoria" 
+                 class="modal fade" 
+                 tabindex="-1" 
+                 aria-labelledby="exampleModalLabel" 
+                 aria-hidden="true">
+                <div class="modal-dialog modal-md ">
+                    <div class="modal-content rounded-4 shadow">
+                        <div class="modal-header p-5 pb-4 border-bottom-0">
+                            <h1 class="fw-bold mb-0 fs-2">[[#{categoria.agregar}]]</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-5 pt-0">
+                            <form th:action="@{/categoria/guardar}" th:object="${categoria}"
+                                  method="POST" class="was-validated" enctype="multipart/form-data">
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" id="descripcion" name="descripcion" placeholder="Descripción" required="true"/>
+                                    <label for="descripcion">[[#{categoria.nombre}]]</label>
+                                </div>                                
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" id="descripcion" name="descripcion" placeholder="Descripción" required="true"/>
+                                    <label for="descripcion">[[#{categoria.descripcion}]]</label>
+                                </div>
+                                <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">[[#{accion.guardar}]]</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 4 Fragmento que se utiliza en la página modifca.html -->
+        <section th:fragment="editarCategoria">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class=" rounded-4 shadow">
+                        <div class="card-header p-5 pb-4 border-bottom-0">
+                            <h1 class="fw-bold mb-0 fs-2">[[#{accion.actualizar}]]</h1>
+                        </div>
+                        <div class="card-body p-5 pt-0">
+                            <form method="POST"
+                                  th:action="@{/categoria/guardar}" 
+                                  th:object="${categoria}"
+                                  class="was-validated"                          
+                                  enctype="multipart/form-data">
+                                <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
+                                <input type="hidden" name="rutaImagen" th:field="*{rutaImagen}"/>
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" 
+                                           name="nombre" th:field="*{nombre}"
+                                           placeholder="nombre" required="true">
+                                        <label for="nombre">[[#{categoria.nombre}]]</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" 
+                                           name="descripcion" th:field="*{descripcion}"
+                                           placeholder="Descripción" required="true">
+                                        <label for="descripcion">[[#{categoria.descripcion}]]</label>
+                                </div>
+                                <div class="form-check mb-3">
+                                    <input class="form-check-input" 
+                                           type="checkbox" 
+                                           name="activo" 
+                                           id="activo"
+                                           th:field="*{activo}">
+                                        <label class="form-check-label" for="activo">[[#{categoria.activo}]]</label>
+                                </div>
+                            </form>
+                        </div>
+                        <section th:replace="~{categoria/fragmentos :: botonesEditar}"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- 5 Fragmento que se utiliza en el fragmento anterior -->
+        <section th:fragment="botonesEditar">
+            <div class="container py-4 mb-4">
+                <div class="row">
+                    <div class="col-md-4 d-grid">
+                        <a th:href="@{/categoria/listado}" 
+                           class="btn btn-outline-primary me-2"
+                           data-bs-toggle="tooltip" 
+                           data-bs-placement="top" 
+                           title="Regresar">
+                            <i class="fas fa-arrow-left"></i> [[#{accion.regresar}]]
+                        </a>
+                    </div>
+                    <div class="col-md-4 d-grid">                                
+                        <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
+                           class="btn btn-outline-danger me-2"
+                           data-bs-toggle="tooltip" 
+                           data-bs-placement="top" 
+                           title="Eliminar">
+                            <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
+                        </a>
+                    </div>
+                    <div class="col-md-4 d-grid">
+                        <button type="submit" 
+                                class="btn btn-outline-success me-2"
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="top" 
+                                title="Guardar">
+                            <i class="fas fa-check"></i> [[#{accion.guardar}]]
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+</html>        
