--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -1,14 +1,255 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                </head>
-                <body>
-                    <header th:replace="~{layout/plantilla :: header}"/>
+        <title>[[#{aplicacion.titulo}]]</title>
+    </head>
+    <body>
 
-                    <footer th:replace="~{layout/plantilla :: footer}"/>
-                </body>
-                </html>
+        <!-- 1 Fragmento del boton para agregar, llama una ventana modal-->
+        <section th:fragment="botonesAgregar" class="py-3 mb-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">   
+                        <button 
+                            type="button" 
+                            class="btn btn-primary btn-block shadow" 
+                            data-bs-toggle="modal" 
+                            data-bs-target="#agregarProducto">
+                            <i class="fas fa-plus"></i> [[#{producto.agregar}]]
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 2 Listado de productos-->
+        <section th:fragment="listadoProductos" id="productos">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="card shadow">
+                            <div class="card-header ">
+                                <h4>[[#{producto.listado}]]</h4>
+                            </div>
+                            <div th:if="${productos != null and !productos.empty}">
+                                <table class="table table-striped table-hover">
+                                    <thead class="table-dark">
+                                        <tr><th>#</th>
+                                            <th>[[#{producto.categoria}]]</th>
+                                            <th>[[#{producto.nombre}]]</th>
+                                            <th>[[#{producto.descripcion}]]</th>
+                                            <th>[[#{producto.precio}]]</th>
+                                            <th>[[#{producto.stock}]]</th>
+                                            <th></th></tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr th:each="producto, contador : ${productos}">
+                                            <td>[[#{producto.id}]]</td>
+                                            <td>[[#{producto.categoria}]]</td>
+                                            <td>[[#{producto.nombre}]]</td>
+                                            <td>[[#{producto.descripcion}]]</td>
+                                            <td>[[#{producto.precio}]]</td>
+                                            <td>[[#{producto.stock}]]</td>      
+                                            <td>
+                                                <a th:href="@{/producto/eliminar/}+${producto.idProducto}"
+                                                   class="btn btn-outline-danger me-2"
+                                                   data-bs-toggle="tooltip" 
+                                                   data-bs-placement="top" 
+                                                   title="Eliminar categoría">
+                                                    <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
+                                                </a>
+                                                <a th:href="@{/producto/modificar/}+${producto.idProducto}"
+                                                   class="btn btn-outline-success me-2"
+                                                   data-bs-toggle="tooltip" 
+                                                   data-bs-placement="top" 
+                                                   title="Modificar categoría">
+                                                    <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="text-center p-2" th:if="${productos == null or productos.empty}">
+                                <span>[[#{lista.vacia}]]</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card text-center bg-light text-primary mb-3 shadow" style="border-radius: 15px;">                           
+                            <div class="card-body">
+                                <h3 style="font-size: 1.5rem;">[[#{producto.total}]]</h3>
+                                <h4 class="fs-2" style="font-size: 2.5rem;"></i> [[${totalProductos}]]</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 3 Fragmento para agregar una producto -->
+        <section th:fragment="agregarProducto">
+            <div id="agregarProducto" 
+                 class="modal fade" 
+                 tabindex="-1" 
+                 aria-labelledby="exampleModalLabel" 
+                 aria-hidden="true">
+                <div class="modal-dialog modal-md ">
+                    <div class="modal-content rounded-4 shadow">
+                        <div class="modal-header p-5 pb-4 border-bottom-0">
+                            <h1 class="fw-bold mb-0 fs-2">[[#{producto.agregar}]]</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body p-5 pt-0">
+                            <form th:action="@{/producto/guardar}" th:object="${producto}"
+                                  method="POST" class="was-validated" enctype="multipart/form-data">
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control rounded-3" id="id" name="id" placeholder="id" required="true"/>
+                                    <label for="id">[[#{producto.id}]]</label>
+                                </div>                                
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control rounded-3" id="categoria" name="categoria" placeholder="categoria" required="true"/>
+                                    <label for="categoria">[[#{producto.categoria}]]</label>
+                                </div>  
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" id="nombre" name="nombre" placeholder="nombre" required="true"/>
+                                    <label for="nombre">[[#{producto.nombre}]]</label>
+                                </div>                                
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" id="descripcion" name="descripcion" placeholder="descripcion" required="true"/>
+                                    <label for="descripcion">[[#{producto.descripcion}]]</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control rounded-3" id="precio" name="precio" placeholder="precio" required="true"/>
+                                    <label for="precio">[[#{producto.precio}]]</label>
+                                </div>                                
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control rounded-3" id="stock" name="stock" placeholder="stock" required="true"/>
+                                    <label for="stock">[[#{producto.stock}]]</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input class="form-control rounded-3" type="file" name="imagenFile" id="imagenFile" onchange="readURL(this);"/>
+                                    <label for="imagenFile"></label>
+                                    <img id="blah" src="#" alt=" " height="200" class="mt-3"/>
+                                </div>
+                                <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">[[#{accion.guardar}]]</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- 4 Fragmento que se utiliza en la página modifca.html -->
+        <section th:fragment="editarProducto">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class=" rounded-4 shadow">
+                        <div class="card-header p-5 pb-4 border-bottom-0">
+                            <h1 class="fw-bold mb-0 fs-2">[[#{accion.actualizar}]]</h1>
+                        </div>
+                        <div class="card-body p-5 pt-0">
+                            <form method="POST"
+                                  th:action="@{/producto/guardar}" 
+                                  th:object="${producto}"
+                                  class="was-validated"                          
+                                  enctype="multipart/form-data">
+                                <input type="hidden" name="idProducto" th:field="*{idProducto}"/>
+                                <input type="hidden" name="rutaImagen" th:field="*{rutaImagen}"/>
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control rounded-3" 
+                                           name="id" th:field="*{id}"
+                                           placeholder="id" required="true">
+                                        <label for="id">[[#{producto.id}]]</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control rounded-3" 
+                                           name="categoria" th:field="*{categoria}"
+                                           placeholder="categoria" required="true">
+                                        <label for="categoria">[[#{producto.categoria}]]</label>
+                                </div>                                
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" 
+                                           name="nombre" th:field="*{nombre}"
+                                           placeholder="nombre" required="true">
+                                        <label for="nombre">[[#{producto.nombre}]]</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" 
+                                           name="descripcion" th:field="*{descripcion}"
+                                           placeholder="descripcion" required="true">
+                                        <label for="descripcion">[[#{producto.descripcion}]]</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control rounded-3" 
+                                           name="precio" th:field="*{precio}"
+                                           placeholder="precio" required="true">
+                                        <label for="precio">[[#{producto.precio}]]</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="number" class="form-control rounded-3" 
+                                           name="stock" th:field="*{stock}"
+                                           placeholder="stock" required="true">
+                                        <label for="stock">[[#{producto.stock}]]</label>
+                                </div>
+                                <div class="form-check mb-3">
+                                    <input class="form-check-input" 
+                                           type="checkbox" 
+                                           name="activo" 
+                                           id="activo"
+                                           th:field="*{activo}">
+                                        <label class="form-check-label" for="activo">[[#{producto.activo}]]</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input class="form-control" type="file" name="imagenFile"
+                                           onchange="readURL(this);" />
+                                    <label for="imagen"></label>
+                                    <img id="blah" th:src="@{${producto.rutaImagen}}" alt="your image" height="200"/>
+                                </div>
+                            </form>
+                        </div>
+                        <section th:replace="~{producto/fragmentos :: botonesEditar}"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- 5 Fragmento que se utiliza en el fragmento anterior -->
+        <section th:fragment="botonesEditar">
+            <div class="container py-4 mb-4">
+                <div class="row">
+                    <div class="col-md-4 d-grid">
+                        <a th:href="@{/producto/listado}" 
+                           class="btn btn-outline-primary me-2"
+                           data-bs-toggle="tooltip" 
+                           data-bs-placement="top" 
+                           title="Regresar">
+                            <i class="fas fa-arrow-left"></i> [[#{accion.regresar}]]
+                        </a>
+                    </div>
+                    <div class="col-md-4 d-grid">                                
+                        <a th:href="@{/producto/eliminar/}+${producto.idProducto}"
+                           class="btn btn-outline-danger me-2"
+                           data-bs-toggle="tooltip" 
+                           data-bs-placement="top" 
+                           title="Eliminar">
+                            <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
+                        </a>
+                    </div>
+                    <div class="col-md-4 d-grid">
+                        <button type="submit" 
+                                class="btn btn-outline-success me-2"
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="top" 
+                                title="Guardar">
+                            <i class="fas fa-check"></i> [[#{accion.guardar}]]
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+</html>
