--- a/src/main/resources/templates/producto/modifica.html
+++ b/src/main/resources/templates/producto/modifica.html
@@ -9,6 +9,8 @@
                 <body>
                     <header th:replace="~{layout/plantilla :: header}"/>
 
+                    <section th:replace="~{producto/fragmentos :: editarProducto}"/>
+                    
                     <footer th:replace="~{layout/plantilla :: footer}"/>
                 </body>
                 </html>
