--- a/src/main/resources/templates/categoria/fragmentos.html
+++ b/src/main/resources/templates/categoria/fragmentos.html
@@ -3,11 +3,10 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>AdvaTech</title>
+        <title>fragmentos</title>
     </head>
     <body>
-
-        <!-- 2 Fragmento para iniciar sesion es la ventana modal -->
+        <!-- Fragmento para iniciar sesion es la ventana modal -->
         <section th:fragment="iniciarSesion">
             <div id="iniciarSesion" 
                  class="modal fade" 
@@ -39,9 +38,7 @@
                     </div>
                 </div>
         </section>
-
-
-        <!-- 3 Fragmento para registarse es la ventana modal -->
+        <!-- Fragmento para registarse es la ventana modal -->
         <section th:fragment="ingresarUsuario">
             <div id="ingresarUsuario" 
                  class="modal fade" 
@@ -73,9 +70,7 @@
                     </div>
                 </div>
         </section>  
-
-
-        <!-- 1 Fragmento del boton para agregar, llama una ventana modal-->
+        <!-- Fragmento del boton para agregar, llama una ventana modal-->
         <section th:fragment="botonesAgregar" class="py-3 mb-3">
             <div class="container">
                 <div class="row">
@@ -91,9 +86,8 @@
                 </div>
             </div>
         </section>
-
-        <!-- 2 Listado de categorias-->
-        <section th:fragment="listadoCategorias" id="categorias">
+        <!-- Listado de Categorias-->
+        <section th:fragment="listado" id="categorias">
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
@@ -111,9 +105,9 @@
                                     </thead>
                                     <tbody>
                                         <tr th:each="categoria, contador : ${categorias}">
-                                            <td>[[#{categoria.id}]]</td>
-                                            <td>[[#{categoria.nombre}]]</td>
-                                            <td>[[#{categoria.descripcion}]]</td>
+                                            <td>[[${contador.count}]]</td>
+                                            <td>[[${categoria.nombre}]]</td>
+                                            <td>[[${categoria.descripcion}]]</td>
                                             <td>
                                                 <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
                                                    class="btn btn-outline-danger me-2"
@@ -149,8 +143,39 @@
                 </div>
             </div>
         </section>
-
-        <!-- 3 Fragmento para agregar una categoria -->
+        <!-- Fragmento utilizado en el menu desplegable -->
+        <section th:fragment="listadoCategorias" id="categorias">
+            <div th:if="${categorias != null and !categorias.empty}">
+                <table class="table table-striped table-hover">
+                    <tbody>
+                        <tr th:each="categoria, contador : ${categorias}">
+                            <td>[[#{categoria.id}]]</td>
+                            <td>[[#{categoria.nombre}]]</td>
+                            <td>[[#{categoria.descripcion}]]</td>
+                            <td>
+                                <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
+                                   class="btn btn-outline-danger me-2"
+                                   data-bs-toggle="tooltip" 
+                                   data-bs-placement="top" 
+                                   title="Eliminar categoría">
+                                    <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
+                                </a>
+                                <a th:href="@{/categoria/modificar/}+${categoria.idCategoria}"
+                                   class="btn btn-outline-success me-2"
+                                   data-bs-toggle="tooltip" 
+                                   data-bs-placement="top" 
+                                   title="Modificar categoría">
+                                    <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]
+                                </a>
+                            </td></tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="text-center p-2" th:if="${categorias == null or categorias.empty}">
+                <span>[[#{lista.vacia}]]</span>
+            </div>
+        </section> 
+        <!-- Fragmento para agregar una categoría -->
         <section th:fragment="agregarCategoria">
             <div id="agregarCategoria" 
                  class="modal fade" 
@@ -167,26 +192,29 @@
                             <form th:action="@{/categoria/guardar}" th:object="${categoria}"
                                   method="POST" class="was-validated" enctype="multipart/form-data">
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control rounded-3" id="descripcion" name="descripcion" placeholder="Descripción" required="true"/>
-                                    <label for="descripcion">[[#{categoria.nombre}]]</label>
+                                    <input type="text" class="form-control rounded-3" id="nombre" name="nombre" placeholder="nombre" required="true"/>
+                                    <label for="nombre">[[#{categoria.nombre}]]</label>
                                 </div>                                
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control rounded-3" id="descripcion" name="descripcion" placeholder="Descripción" required="true"/>
+                                    <input type="text" class="form-control rounded-3" id="descripcion" name="descripcion" placeholder="descripcion" required="true"/>
                                     <label for="descripcion">[[#{categoria.descripcion}]]</label>
                                 </div>
+                                <div class="mb-3">
+                                    <label for="activo">[[#{categoria.activo}]]</label>
+                                    <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
+                                </div>
                                 <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">[[#{accion.guardar}]]</button>
-                            </form>
                         </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
-
-        <!-- 4 Fragmento que se utiliza en la página modifca.html -->
+        <!-- Fragmento que se utiliza en la página modifica.html -->
         <section th:fragment="editarCategoria">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <div class=" rounded-4 shadow">
+                    <div class="rounded-4 shadow">
                         <div class="card-header p-5 pb-4 border-bottom-0">
                             <h1 class="fw-bold mb-0 fs-2">[[#{accion.actualizar}]]</h1>
                         </div>
@@ -197,61 +225,63 @@
                                   class="was-validated"                          
                                   enctype="multipart/form-data">
                                 <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
-                                <input type="hidden" name="rutaImagen" th:field="*{rutaImagen}"/>
+
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control rounded-3" 
+                                           name="idCategoria" th:field="*{idCategoria}"
+                                           required="true">
+                                        <label for="activo">[[#{categoria.id}]]</label>
+                                </div>
                                 <div class="form-floating mb-3">
                                     <input type="text" class="form-control rounded-3" 
                                            name="nombre" th:field="*{nombre}"
                                            placeholder="nombre" required="true">
-                                        <label for="nombre">[[#{categoria.nombre}]]</label>
+                                        <label for="activo">[[#{categoria.nombre}]]</label>
                                 </div>
                                 <div class="form-floating mb-3">
                                     <input type="text" class="form-control rounded-3" 
                                            name="descripcion" th:field="*{descripcion}"
-                                           placeholder="Descripción" required="true">
-                                        <label for="descripcion">[[#{categoria.descripcion}]]</label>
+                                           required="true">
+                                        <label for="activo">[[#{categoria.descripcion}]]</label>
                                 </div>
-                                <div class="form-check mb-3">
+                                <div class=" mb-3">
+                                    <label for="activo">[[#{categoria.activo}]]</label>
                                     <input class="form-check-input" 
                                            type="checkbox" 
                                            name="activo" 
                                            id="activo"
                                            th:field="*{activo}">
-                                        <label class="form-check-label" for="activo">[[#{categoria.activo}]]</label>
                                 </div>
-                            </form>
                         </div>
                         <section th:replace="~{categoria/fragmentos :: botonesEditar}"/>
+                        </form>
                     </div>
                 </div>
             </div>
         </section>
-
-
-        <!-- 5 Fragmento que se utiliza en el fragmento anterior -->
+        <!-- Fragmento que se utiliza en el fragmento anterior -->
         <section th:fragment="botonesEditar">
             <div class="container py-4 mb-4">
                 <div class="row">
                     <div class="col-md-4 d-grid">
-                        <a th:href="@{/categoria/listado}" 
-                           class="btn btn-outline-primary me-2"
+                        <a th:href="@{/categoria/listado}" class="btn btn-outline-primary me-2"
                            data-bs-toggle="tooltip" 
                            data-bs-placement="top" 
                            title="Regresar">
                             <i class="fas fa-arrow-left"></i> [[#{accion.regresar}]]
                         </a>
                     </div>
-                    <div class="col-md-4 d-grid">                                
-                        <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
+                    <div class="col-md-4 d-grid">
+                        <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}" 
                            class="btn btn-outline-danger me-2"
                            data-bs-toggle="tooltip" 
                            data-bs-placement="top" 
-                           title="Eliminar">
+                           title="Eliminar categoría">
                             <i class="fas fa-trash"></i> [[#{accion.eliminar}]]
                         </a>
                     </div>
                     <div class="col-md-4 d-grid">
-                        <button type="submit" 
-                                class="btn btn-outline-success me-2"
+                        <button type="submit" class="btn btn-outline-success me-2"
                                 data-bs-toggle="tooltip" 
                                 data-bs-placement="top" 
                                 title="Guardar">
@@ -261,5 +291,4 @@
                 </div>
             </div>
         </section>
-
 </html>        
