--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TODO supply a title</title>
+        <title>Categoria</title>
         <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 </head>
@@ -10,8 +11,8 @@
                     <header th:replace="~{layout/plantilla :: header}"/>
 
                     <section th:replace="~{categoria/fragmentos :: botonesAgregar}"/>
+                    <section th:replace="~{categoria/fragmentos :: listado}"/>
                     <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/>
-                    <section th:replace="~{categoria/fragmentos :: listadoCategorias}"/>
                     
                     <footer th:replace="~{layout/plantilla :: footer}"/>
                 </body>
