--- a/src/main/resources/templates/producto/listado.html
+++ b/src/main/resources/templates/producto/listado.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TODO supply a title</title>
+        <title>Producto</title>
         <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 </head>
@@ -11,7 +11,7 @@
 
                     <section th:replace="~{producto/fragmentos :: botonesAgregar}"/>
                     <section th:replace="~{producto/fragmentos :: agregarProducto}"/>
-                    <section th:replace="~{producto/fragmentos :: listadoProductos}"/>
+                    <section th:replace="~{producto/fragmentos :: listado}"/>
                     
                     <footer th:replace="~{layout/plantilla :: footer}"/>
                 </body>
