Pantalla de productos, perfil y nosotros
Se agregó la lista de productos en la pantalla de productos
En pantalla de nosotros se agregó al equipo de trabajo
Se pueden modificar los productos y categorías en el perfil

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,13 +10,15 @@
 
     <header th:replace="~{layout/plantilla :: header}" />
     <section th:replace="~{layout/plantilla :: banner}" />
+    <div th:replace="~{layout/plantilla :: busqueda}"></div>
+
     <section th:replace="~{layout/plantilla :: container}">
       <aside th:replace="~{layout/plantilla :: vendido}" />
       <div th:replace="~{layout/plantilla :: compras}" />
-      <div th:replace="~{layout/plantilla :: busqueda}" />
+      <div th:replace="~{layout/plantilla :: description}"></div>
+
     </section>
 
     <footer th:replace="~{layout/plantilla :: footer}" />
-    =======
   </body>
 </html>
