--- a/src/main/resources/templates/nosotros.html
+++ b/src/main/resources/templates/nosotros.html
@@ -65,6 +65,59 @@
         <h2>Visítanos</h2>
         <p>Te invitamos a visitar nuestra tienda y descubrir todo lo que Grama tiene para ofrecerte. Estamos comprometidos con la satisfacción del cliente y la calidad de nuestros productos y servicios.</p>
     </div>
+    <h2>Nuestro equipo de trabajo</h2>
+
+
+
+</div>
+
+<div class="d-flex justify-content-center mt-5 mb-5">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="max-width: 600px;">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://firebasestorage.googleapis.com/v0/b/grama-9f778.appspot.com/o/anonimo.png?alt=media&token=e6d5539b-0368-4d9c-a1e1-389cac91d3b1" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Gabriel Mairena</h5>
+                    <p>Soporte técnico y desarrollador web</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://firebasestorage.googleapis.com/v0/b/grama-9f778.appspot.com/o/anonimo.png?alt=media&token=e6d5539b-0368-4d9c-a1e1-389cac91d3b1" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Gerson Chacon</h5>
+                    <p>Desarrollador web</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://firebasestorage.googleapis.com/v0/b/grama-9f778.appspot.com/o/anonimo.png?alt=media&token=e6d5539b-0368-4d9c-a1e1-389cac91d3b1" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Sebastian Araya</h5>
+                    <p>Desarrollador web</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://firebasestorage.googleapis.com/v0/b/grama-9f778.appspot.com/o/anonimo.png?alt=media&token=e6d5539b-0368-4d9c-a1e1-389cac91d3b1" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Johan Alvarado</h5>
+                    <p>Desarrollador web</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 </div>
 
 <footer th:replace="~{layout/plantilla :: footer}">
