--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head th:replace="~{layout/plantilla :: head}">
     <title>TODO supply a title</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .card {
+        width: 100%;
+        border: none; /* Quitamos el borde predeterminado */
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Agregamos una sombra ligera */
+        transition: box-shadow 0.3s ease; /* Efecto de transición en la sombra */
+    }
+
+    .card:hover {
+        box-shadow: 0 8px 16px rgba(0,0,0,0.2); /* Aumentamos la sombra al pasar el mouse */
+    }
+
+    </style>
 </head>
 <body>
+
 <header th:replace="~{layout/plantilla :: header}"/>
+<h1>
+    WIP
+</h1>
 
 <div class="container d-flex justify-content-center mt-5">
-    <div class="card mb-3" style="max-width: 540px;">
+    <div class="card mb-3" style="max-width: 800px;">
         <div class="row g-0">
             <div class="col-md-4">
                 <img src="..." class="img-fluid rounded-start" alt="...">
@@ -18,10 +34,10 @@
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title">Perfil</h5>
-                    <p class="card-text">Nombre completo </p>
-                    <p class="card-text">Cédula </p>
-                    <p class="card-text">Correo Electrónico </p>
-                    <p class="card-text">Teléfono </p>
+                    <p class="card-text">Nombre completo</p>
+                    <p class="card-text">Cédula</p>
+                    <p class="card-text">Correo Electrónico</p>
+                    <p class="card-text">Teléfono</p>
                     <button type="button" class="btn btn-primary">Editar</button>
                 </div>
             </div>
@@ -29,8 +45,21 @@
     </div>
 </div>
 
-<h2 class="text-center mt-5">PRODUCTOS FAVORITOS</h2>
+
+<aside>
+    <button type="button" class="btn btn-primary" onclick="window.location.href = '/categoria/listado'">
+        <i></i> Ver categorias
+    </button>
+    <button type="button" class="btn btn-primary mt-3" onclick="window.location.href = '/producto/listado'">
+        <i></i> Ver productos
+    </button>
+</aside>
+
+<main>
+    <h2 class="text-center mt-5">PRODUCTOS FAVORITOS</h2>
+</main>
 
 <footer th:replace="~{layout/plantilla :: footer}"/>
+
 </body>
 </html>
