Security y actualizacion a la base de datos

--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -31,7 +31,7 @@
                     <div class="card-body">
                         <h5 class="card-title" th:text="${producto.nombre}"></h5>
                         <p class="card-text" th:text="${producto.descripcion}"></p>
-                        <a href="/" class="btn btn-primary">Go somewhere</a>
+                        <a href="/productos/${producto.id}" class="btn btn-primary">Ir al producto</a>
                     </div>
                 </div>
             </div>
