--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -60,7 +60,7 @@ margin-bottom: 10px;
 
                         <div class="mb-3">
                             <label for="inputPassword" class="form-label">Contraseña</label>
-                            <input type="password" class="form-control" id="inputPassword" name="contrasena" placeholder="Contraseña" required>
+                            <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Contraseña" required>
                             <div class="invalid-feedback">
                                 Por favor ingresa tu contraseña.
                             </div>
