Modificaciones est[eticas

--- a/src/main/resources/templates/nosotros.html
+++ b/src/main/resources/templates/nosotros.html
@@ -49,7 +49,7 @@
 
 <div class="container">
     <div class="section">
-        <h2>¿Quiénes Somos?</h2>
+        <h2><br>¿Quiénes Somos?</h2>
         <p>Somos apasionados de la tecnología y nos especializamos en ofrecer una amplia gama de productos informáticos de alta calidad. Nuestra tienda es el destino ideal para todas tus necesidades tecnológicas.</p>
     </div>
 
