--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -222,7 +222,7 @@
 
         <div  th:fragment="busqueda" class="center mt-1">
             <div class="container_search_bar">
-                <input type="text" class="search_bar" placeholder="Buscar producto">
+                <input type="text" class="search_bar" placeholder="Buscar producto...">
                     <button class="button_search">Buscar</button>
             </div>
 
@@ -264,14 +264,14 @@
             </div>
         </header>
 
-
+        <!-- Recuadro que muestra el producto mas vendido-->    
         <img th:fragment="banner" src="https://firebasestorage.googleapis.com/v0/b/grama-9f778.appspot.com/o/Bienvenido%20Grama.png?alt=media&token=b1b3a721-3689-4aec-b15d-27490ebf1fbb" alt="Banner" class="banner" />
         <div th:fragment="container" class="_container" style="margin-left: 20px; margin-top: 50px;">
             <div th:fragment="vendido" class="left">
                 <h2>Producto más vendido</h2>
                 <div class="producto">
                     <img src="ruta/a/la/imagen-del-producto.jpg" alt="Producto más vendido">
-                        <h3>Nombre del Producto</h3>
+                        <h3><strong>Nombre del Producto</strong></h3>
                         <p>Descripción breve del producto más vendido.</p>
                         <p><strong>Precio:</strong> $XX.XX</p>
                         <a href="enlace-al-producto">Ver más</a>
@@ -280,6 +280,8 @@
             <div class="description" th:fragment="description">
                 <img src="https://firebasestorage.googleapis.com/v0/b/grama-9f778.appspot.com/o/discount%20grama.png?alt=media&token=37776829-b0a2-4587-9aab-21cb190aa43d" alt="Descripcion" class="_descripcion"/>
             </div>
+            
+            <!-- Recuadro que muestra la lista de compras-->  
             <div th:fragment="compras" class="_right mb-3" style="text-align: center; margin-top: 20px;">
                 <div class="right_list">
                     <h2>Lista de compras</h2>
@@ -296,6 +298,7 @@
 
         </div>
 
+        <!-- Footer con informacion de contcato y redes sociales-->  
         <footer th:fragment="footer" style="text-align: center; padding: 1rem;">
             <div>
                 <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
